--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
+    "csurf": "^1.11.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -23,6 +26,8 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.10.3",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
