--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "mongodb": "^3.1.6",
     "mongoose": "^5.10.3",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
